[package]
name = "vulkano-raytracing"
version = "0.1.0"
authors = ["Vlad Alex <vlad.al.dp@gmail.com>"]

[[bin]]
name = "vulkano"
path = "src/main.rs"

[dependencies]
vulkano = "0.7.1"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
vulkano_text = "0.5"
winit = "0.7.0"

time = "0.1"
image = "0.18"
tobj = "0.1"
cgmath = "0.16"
