[package]
name = "vulkano-raytracing"
version = "0.1.1"
authors = ["Vlad Alex <vlad.al.dp@gmail.com>"]

[[bin]]
name = "tracer"
path = "src/main.rs"

[dependencies]
vulkano = "0.7.1"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
vulkano_text = "0.5"
winit = "0.7.0"

time = "0.1"
image = "0.18"
tobj = "0.1"
cgmath = "0.16"
clap = "~2.27.0"
regex = "0.2"
lazy_static = "~1.0.0"
